Fix construction page background gradient on mobile displays.

--- a/css/theme.css
+++ b/css/theme.css
@@ -12,7 +12,7 @@ html {
 	height: 100%;
 	min-height: 100%;
 
-	background-size: 100% 150%;
+	background-size: 1024px 768px;
 }
 
 h1 {
